--- a/docker-compose-alt.yml
+++ b/docker-compose-alt.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   web-page:
-    image: shekeriev/dofepapp:static
+    image: KTsankow/DOFExam:static
     ports:
       - "8080:80"
     deploy: 
