--- a/yaml/application.yaml
+++ b/yaml/application.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: app-cont
-        image: KTsankow/DOFExam:%IMAGE-PLACEHOLDER%
+        image: ktsankow/dofexam:%IMAGE-PLACEHOLDER%
         ports:
         - containerPort: 80 
 ---
